[package]
name = "requirements-txt-generator"
version = "0.1.2"
edition = "2021"
authors = ["Xinyu Bao <baoxinyuworks@163.com>"]
description = "Automatically generate a requirement.txt file for Python projects"
license = "MIT"
repository = "https://github.com/AspadaX/requirements-txt-generator"
keywords = ["cli", "python", "dependency", "tool", "generate"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
